shift info ui fix

--- a/src/components/listPage/shiftListInfo/shiftListInfo.css
+++ b/src/components/listPage/shiftListInfo/shiftListInfo.css
@@ -15,6 +15,8 @@
 
   background: linear-gradient(110.99deg, #001f7d 0%, #0000b3 100%);
   border-radius: 15px 15px 0px 0px;
+
+  transition: all 0.2s ease-in;
 }
 
 .info-container--time {
